<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomAccountActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/customProfilePictureBrowse"
        app:layout_constraintBottom_toBottomOf="@+id/ppText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/ppText"
        app:layout_constraintTop_toTopOf="@+id/ppText"
        app:layout_constraintVertical_bias="1.0" />

    <Button

        android:id="@+id/startButton"
        android:layout_width="196dp"
        android:layout_height="43dp"
        android:layout_marginTop="176dp"
        android:text="@string/customAccountValidation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.466" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/backGroundRed"
        android:ems="10"
        android:hint="@string/customNicknameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/nicknameInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nicknameText"
        app:layout_constraintTop_toTopOf="@+id/nicknameText" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="151dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomingCustomAccountMessage"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.074" />


    <TextView
        android:id="@+id/ppText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/customProfilePictureText"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nicknameText"
        app:layout_constraintStart_toStartOf="@id/nicknameText"
        app:layout_constraintTop_toBottomOf="@+id/nicknameInfo"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/nicknameText"
        android:layout_width="177dp"
        android:layout_height="31dp"
        android:text="@string/customNicknameText"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ppText"
        app:layout_constraintEnd_toStartOf="@+id/nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/nicknameInfo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/customNicknamePrecision"
        android:textColor="#090909"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nicknameText"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@id/nicknameText"

        app:layout_constraintTop_toBottomOf="@+id/nicknameText"
        app:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/ppText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />
</androidx.constraintlayout.widget.ConstraintLayout>